force-app/main/default/objects/Cargo__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Agent assigned to manage the Cargo.</description>
    <label>Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cargo</relationshipName>
    <type>Lookup</type>
</CustomField>