force-app/main/default/objects/Cargo__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <defaultValue>&quot;Standard&quot;</defaultValue>
    <description>Determines how the parcel should be handled in transit.</description>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Perishable</fullName>
            </value>
            <value>
                <fullName>Hazardous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>