force-app/main/default/objects/Cargo__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A short description of the contents of the parcel.</description>
    <label>Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>